--- a/GraduatioProject_Android/app/src/main/res/layout/activity_voice.xml
+++ b/GraduatioProject_Android/app/src/main/res/layout/activity_voice.xml
@@ -36,21 +36,386 @@
             />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/shengyin"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:text="声音"
-        >
+        android:layout_height="2dp"
+        android:background="#c9c9c9">
+    </View>
 
-    </Button>
-    <Button
-        android:id="@+id/shengyin1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:text="声音"
-        >
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    </Button>
+            <LinearLayout
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="7">
+
+                <LinearLayout
+                    android:id="@+id/noMusicLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_nomusic">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="无提示音"
+                        android:textSize="20dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music1LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音1"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music2LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音2"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music3LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音3"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music4LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音4"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music5LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音5"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music6LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音6"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music7LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音7"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+                <LinearLayout
+                    android:id="@+id/music8LL"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@mipmap/icon_music">
+                    </TextView>
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="30dp">
+                    </View>
+                    <TextView
+                        android:layout_width="260dp"
+                        android:layout_height="60dp"
+                        android:text="提示音8"
+                        android:textSize="18dp"
+                        android:gravity="center|left">
+                    </TextView>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c9c9c9">
+                </View>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <RadioGroup
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:id="@+id/noMusicRB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music1RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music2RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music3RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music4RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music5RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music6RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music7RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#c9c9c9">
+                    </View>
+                    <RadioButton
+                        android:id="@+id/music8RB"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:textSize="18dp"/>
+                </RadioGroup>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
