--- a/Test/app/src/main/res/layout/activity_main.xml
+++ b/Test/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
-    tools:context=".tools.FragmentManager">
+    tools:context=".MainActivity">
 
     <View
         android:layout_width="match_parent"
@@ -41,11 +41,13 @@
         <WebView
             android:id="@+id/TemperatureWW"
             android:layout_width="match_parent"
-            android:layout_height="310dp">
+            android:layout_weight="1"
+            android:layout_height="1dp">
         </WebView>
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="290dp">
+            android:layout_height="1dp"
+            android:layout_weight="2">
             <WebView
                 android:id="@+id/RecommendWW"
                 android:layout_width="match_parent"
@@ -57,17 +59,12 @@
             android:layout_height="1dp"
             android:layout_weight="0.1">
         </View>
-        <Button
-            android:id="@+id/IntoOutdoorBtn"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:background="@drawable/style_button_outdoor"
-            android:text="进入户外模式"
-            android:textSize="18dp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_weight="0.1">
         </View>
     </LinearLayout>
+
 </LinearLayout>
