--- a/GraduatioProject_Android/app/src/main/res/drawable/style_button_outdoor.xml
+++ b/GraduatioProject_Android/app/src/main/res/drawable/style_button_outdoor.xml
@@ -3,8 +3,8 @@
 
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="#60c9c9c9"></solid>
-            <corners android:radius="50dp"></corners>
+            <solid android:color="#f2f2f2"></solid>
+            <corners android:radius="18dp"></corners>
             <stroke android:width="1dp" android:color="#949494"></stroke>
         </shape>
     </item>
